--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                         <form class="login_form">
 
                             <div>
-                                <input class="input-email" type="email" placeholder="Enter Your Email">
+                                <input required class="input-email" type="email" placeholder="Enter Your Email">
                             </div>
                             <div>
-                                <input class="input-password" type="password" placeholder="Enter Your Password">
+                                <input required class="input-password" type="password" placeholder="Enter Your Password">
                             </div>
                             <button class="login_btn">Login</button>
                             <span class="text-light">Not a member?</span> <a href="#" class="sing_up">Sign Up</a>
