--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                         <p class="color">START FOR FREE</p>
                         <h2>Login Your Account <span>.</span></h2>
                         <form class="login_form">
-
                             <div>
                                 <input required class="input-email" type="email" placeholder="Enter Your Email">
                             </div>
@@ -27,7 +26,7 @@
                                 <input required class="input-password" type="password" placeholder="Enter Your Password">
                             </div>
                             <button class="login_btn">Login</button>
-                            <span class="text-light">Not a member?</span> <a href="#" class="sing_up">Sign Up</a>
+                            <span class="text-light">Not a member?</span> <a href="signup.html" class="sing_up">Sign Up</a>
                         </div>
                     </form>
                 </div>
